--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <tr> State </tr>
   <tr> 2017 estimate </tr>
   
-  <th>Hi</th>
+  <th> City </th>
+  <th> State </th>
+  <th> 2017 Estimate</th>
   </table>
   
 </body>
