--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <th> State </th>
       <th> 2017 Estimate</th>
     </tr>
+    
+    <tr>
+      <td> New York </td>
+    </tr>
   
   
   </table>
