--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </tr>
   
     <tr>
-      <td>Lost Angeles</td>
+      <td>Los Angeles</td>
       <td>California</td>
       <td>3,999,759</td>
     </tr>
